@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro.c,v 1.7 2005-05-04 23:04:23 achu Exp $
+ *  $Id: cerebro.c,v 1.8 2005-05-05 16:12:57 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -13,10 +13,10 @@
 #endif /* STDC_HEADERS */
 
 #include "cerebro.h"
-#include "cerebro_api.h"
-#include "cerebro_config.h"
-#include "cerebro_module.h"
-#include "cerebro_util.h"
+#include "cerebro/cerebro_api.h"
+#include "cerebro/cerebro_config.h"
+#include "cerebro/cerebro_module.h"
+#include "cerebro/cerebro_util.h"
 
 static char *cerebro_error_messages[] =
   {
