@@ -1,12 +1,11 @@
 /*****************************************************************************\
- *  $Id: cerebro_config_module.h,v 1.9 2005-05-03 22:46:34 achu Exp $
+ *  $Id: cerebro_config_module.h,v 1.1 2005-05-05 16:12:57 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBRO_CONFIG_MODULE_H
 #define _CEREBRO_CONFIG_MODULE_H
 
-/* XXX */
-#include "cerebro_config.h"
+#include <cerebro/cerebro_config.h>
 
 /*
  * Cerebro_config_setup
