@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_module.c,v 1.22 2005-05-04 22:21:33 achu Exp $
+ *  $Id: cerebro_module.c,v 1.23 2005-05-05 16:12:57 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -20,11 +20,11 @@
 #include <dirent.h>
 
 #include "cerebro.h"
-#include "cerebro_clusterlist_module.h"
-#include "cerebro_config_module.h"
-#include "cerebro_constants.h"
-#include "cerebro_error.h"
-#include "cerebro_module.h"
+#include "cerebro/cerebro_clusterlist_module.h"
+#include "cerebro/cerebro_config_module.h"
+#include "cerebro/cerebro_constants.h"
+#include "cerebro/cerebro_error.h"
+#include "cerebro/cerebro_module.h"
 
 #if !WITH_STATIC_MODULES
 #include "ltdl.h"
