@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_clusterlist_util.c,v 1.10 2005-05-04 20:58:09 achu Exp $
+ *  $Id: cerebro_clusterlist_util.c,v 1.11 2005-05-05 16:12:57 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -12,7 +12,8 @@
 #include <string.h>
 #endif /* STDC_HEADERS */
 
-#include "cerebro_error.h"
+#include "cerebro/cerebro_error.h"
+
 #include "cerebro_clusterlist_util.h"
 
 int 
