@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_config_gendersllnl.c,v 1.13 2005-05-04 20:58:09 achu Exp $
+ *  $Id: cerebro_config_gendersllnl.c,v 1.14 2005-05-05 16:12:57 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -19,9 +19,9 @@
 
 #include <gendersllnl.h>
 
-#include "cerebro_constants.h"
-#include "cerebro_error.h"
-#include "cerebro_config_module.h"
+#include "cerebro/cerebro_config_module.h"
+#include "cerebro/cerebro_constants.h"
+#include "cerebro/cerebro_error.h"
 
 extern int h_errno;
 
